--- a/main.css
+++ b/main.css
@@ -16,27 +16,32 @@ h1, h2, h3 {
 }
 
 aside {
-	
+	float: left;
+	width: 15%;
 }
 
 footer {
-
+	clear: both;
 }
 
 header {
-
+	margin-left: 1%;
 }
 
 img {
-	max-width: 75%;
+	max-width: 70%;
 }
 
 main {
-
+	float: left;
+	width: 29%;
+	margin-right: 1%;
 }
 
 nav {
-
+	float: left;
+	width: 8%;
+	margin-left: 1%;
 }
 
 #copyright {
